--- a/index.html
+++ b/index.html
@@ -1296,21 +1296,21 @@ Children: ${child}`;
   </script>
   <script type="module">
     // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-analytics.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyC3T18wvRTXyVapD1-Wsi-zdweg_Y0irww",
-      authDomain: "jungle-website-deploy.firebaseapp.com",
-      projectId: "jungle-website-deploy",
-      storageBucket: "jungle-website-deploy.firebasestorage.app",
-      messagingSenderId: "54591681349",
-      appId: "1:54591681349:web:3525076205af901469042c",
-      measurementId: "G-RKF44BPXKW"
+      apiKey: "AIzaSyCubWp41GtwfaI3hc341PecYAKtPS69q98",
+      authDomain: "jungle-hue.firebaseapp.com",
+      projectId: "jungle-hue",
+      storageBucket: "jungle-hue.firebasestorage.app",
+      messagingSenderId: "281070360249",
+      appId: "1:281070360249:web:2b9ce67d7af5b7415e2d68",
+      measurementId: "G-TBMB0R0ED6"
     };
 
     // Initialize Firebase
