--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,7 @@ Children: ${child}`;
                   <option value="bandhavgarh">Ranthambore</option>
                   <option value="bandhavgarh">Melghat </option>
                   <option value="bandhavgarh">Tipeshwar</option>
+                  <option value="bandhavgarh"> Bhigwan </option>
                   <option value="bandhavgarh">Ranthambore</option>
                   <option value="bandhavgarh"> ⁠Panna </option>
                   <option value="bandhavgarh"> ⁠Jalana</option>
