--- a/public/contact.html
+++ b/public/contact.html
@@ -110,7 +110,18 @@
 			<section class="contact-page-area section-gap">
 				<div class="container">
 					<div class="row">
-						<div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
+						<div class="map-wrap" style="width:100%; height:445px;">
+							  <iframe 
+							    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.5984263561604!2d73.8221085!3d18.501840399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf079e5f600f%3A0xcd720536be7082d8!2sAntarnaad%20Yog%20Kendra!5e0!3m2!1sen!2sin!4v1761982587247!5m2!1sen!2sin" 
+							    width="100%" 
+							    height="445" 
+							    style="border:0;" 
+							    allowfullscreen="" 
+							    loading="lazy" 
+							    referrerpolicy="no-referrer-when-downgrade">
+							  </iframe>
+							</div>
+
 						<div class="col-lg-4 d-flex flex-column address-wrap">
 							<div class="single-contact-address d-flex flex-row">
 								<div class="icon">
