--- a/public/index.html
+++ b/public/index.html
@@ -156,13 +156,12 @@ Children: ${child}`;
     <div class="container">
       <div class="row fullscreen align-items-center justify-content-between">
         <div class="col-lg-6 col-md-6 banner-left">
-          <h6 class="text-white">Away from monotonous life</h6>
-          <h1 class="text-white">Magical Travel</h1>
+          <!-- <h6 class="text-white">Away from monotonous life</h6> -->
+          <h1 class="text-white">Explore. Educate. Conserve.</h1>
           <p class="text-white">
-            If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You
-            may see some for as low as $.17 each.
+            Customised wildlife journeys across India—planned around your dates, interests, and pace.
           </p>
-          <a href="#" class="primary-btn text-uppercase">Get Started</a>
+          <!-- <a href="#" class="primary-btn text-uppercase">Get Started</a> -->
         </div>
         <div class="col-lg-4 col-md-6 banner-right">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
