--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@ Children: ${child}`;
       <div class="row fullscreen align-items-center justify-content-between">
         <div class="col-lg-6 col-md-6 banner-left">
           <!-- <h6 class="text-white">Away from monotonous life</h6> -->
-          <h1 class="text-white">Explore. Educate. Conserve.</h1>
+          <h1 class="text-white">Explore, Educate, Conserve,</h1>
           <p class="text-white">
             Customised wildlife journeys across India—planned around your dates, interests, and pace.
           </p>
