--- a/public/blogwriting1.html
+++ b/public/blogwriting1.html
@@ -101,7 +101,7 @@
 
 			
 
-			<!-- Start hot-deal Area -->
+					<!-- Start hot-deal Area -->
 			<section class="hot-deal-area section-gap">
 				<div class="container">
 		            <div class="row d-flex justify-content-center">
@@ -119,9 +119,47 @@
 									<div class="overlay overlay-bg"></div>
 									<img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
 								</div>
+								<div class="price-detials">
+									<a href="#" class="price-btn">Starting From <span>$250</span></a>
+								</div>
 								<div class="details">
+									<h4 class="text-white">Ancient Architecture</h4>
+									<p class="text-white">
+										Cairo, Egypt
+									</p>
 								</div>								
-							</div>																		
+							</div>
+							<div class="single-carusel">
+								<div class="thumb relative">
+									<div class="overlay overlay-bg"></div>
+									<img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
+								</div>
+								<div class="price-detials">
+									<a href="#" class="price-btn">Starting From <span>$250</span></a>
+								</div>
+								<div class="details">
+									<h4 class="text-white">Ancient Architecture</h4>
+									<p class="text-white">
+										Cairo, Egypt
+									</p>
+								</div>								
+							</div>
+							<div class="single-carusel">
+								<div class="thumb relative">
+									<div class="overlay overlay-bg"></div>
+									<img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
+								</div>
+								<div class="price-detials">
+									<a href="#" class="price-btn">Starting From <span>$250</span></a>
+								</div>
+								<div class="details">
+									<h4 class="text-white">Ancient Architecture</h4>
+									<p class="text-white">
+										Cairo, Egypt
+									</p>
+								</div>								
+							</div>	
+																				
 						</div>
 
                    <div class="section-top-border">
