--- a/public/blogwriting1.html
+++ b/public/blogwriting1.html
@@ -32,16 +32,24 @@
 		</head>
 		<body>	
 			<header id="header">
-				<div class="header-top">
-					<div class="container">
-			  		<div class="row align-items-center">
-			  			
-			  			<div class="col-lg-6 col-sm-6 col-6 header-top-right">
-							<div class="header-social">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-dribbble"></i></a>
-								<a href="#"><i class="fa fa-behance"></i></a>
+    <div class="header-top">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 col-sm-6 col-6 header-top-left">
+            <ul
+            </ul>
+          </div>
+          <div class="col-lg-6 col-sm-6 col-6 header-top-right">
+            <div class="header-social">
+              <a href="https://www.facebook.com/share/1AAkE5t75K/" target="_blank" title="Facebook">
+                <i class="fa fa-facebook"></i>
+              </a>
+              <a href="https://www.instagram.com/jungle_hues/?igsh=aWJmb2p0ZHZkb2dy" target="_blank" title="Instagram">
+                <i class="fa fa-instagram"></i>
+              </a>
+              <a href="https://www.linkedin.com/company/jungle-hues/" target="_blank" title="LinkedIn">
+                <i class="fa fa-linkedin"></i>
+              </a>
 							</div>
 			  			</div>
 			  		</div>			  					
