--- a/public/blogwriting1.html
+++ b/public/blogwriting1.html
@@ -62,31 +62,26 @@
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About</a></li>
-				          <li><a href="packages.html">Packages</a></li>
-				          <li><a href="hotels.html">Hotels</a></li>
-				          <li><a href="insurance.html">Insurence</a></li>
-				          <li class="menu-has-children"><a href="">Blog</a>
-				            <ul>
-				              <li><a href="blog-home.html">Blog Home</a></li>
-				              <li><a href="blog-single.html">Blog Single</a></li>
-				            </ul>
-				          </li>	
-				          <li class="menu-has-children"><a href="">Pages</a>
-				            <ul>
-				            	  <li><a href="elements.html">Elements</a></li>
-						          <li class="menu-has-children"><a href="">Level 2 </a>
-						            <ul>
-						              <li><a href="#">Item One</a></li>
-						              <li><a href="#">Item Two</a></li>
-						            </ul>
-						          </li>					                		
-				            </ul>
-				          </li>					          					          		          
-				          <li><a href="contact.html">Contact</a></li>
-				        </ul>
-				      </nav><!-- #nav-menu-container -->					      		  
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <!-- <li><a href="packages.html">Tours</a></li> -->
+            <li class="menu-has-children"><a href="#">Tours</a>
+              <ul id="blog-menu"></ul>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#podcast-section">Jungle Podcast</a></li>
+            <li class="menu-has-children"><a href="#">Blog</a>
+              <ul id="blog-menu"></ul>
+            </li>
+            <li class="menu-has-children"><a href="">Gallery</a>
+              <ul>
+                <li><a href="Gallery1fauna.html">Flaura</a></li>
+                <li><a href="Gallery2flaura.html">Fauna</a></li>
+                <li><a href="Gallery3common.html">Landscapes</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav><!-- #nav-menu-container -->					      		  
 					</div>
 				</div>
 			</header><!-- #header -->
