--- a/public/blogwriting1.html
+++ b/public/blogwriting1.html
@@ -183,7 +183,8 @@
 
 				<div class="container">
 					<h3 class="text-heading">Key Takeaways</h3>
-					
+					<div class="row justify-content-center">
+					<div class="col-lg-10 active-hot-deal-carusel">
 					<div class="single-carusel">
 								<div class="thumb relative">
 									<div class="overlay overlay-bg"></div>
@@ -198,6 +199,8 @@
 										Cairo, Egypt
 									</p>
 								</div>								
+					</div>
+					</div>
 					</div>
 					
 					<p class="sample-text">
