--- a/public/blogwriting1.html
+++ b/public/blogwriting1.html
@@ -65,14 +65,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <!-- <li><a href="packages.html">Tours</a></li> -->
-            <li class="menu-has-children"><a href="#">Tours</a>
+            <!-- <li class="menu-has-children"><a href="#">Tours</a>
               <ul id="blog-menu"></ul>
-            </li>
+            </li> -->
             <li><a href="contact.html">Contact</a></li>
             <li><a href="#podcast-section">Jungle Podcast</a></li>
-            <li class="menu-has-children"><a href="#">Blog</a>
+            <!-- <li class="menu-has-children"><a href="#">Blog</a>
               <ul id="blog-menu"></ul>
-            </li>
+            </li> -->
             <li class="menu-has-children"><a href="">Gallery</a>
               <ul>
                 <li><a href="Gallery1fauna.html">Flaura</a></li>
