--- a/public/Tour Blog admin.html
+++ b/public/Tour Blog admin.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tour Management System</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -145,6 +146,23 @@
       min-height: 60px;
     }
 
+    .image-preview {
+      margin-top: 8px;
+      display: none;
+    }
+
+    .image-preview.show {
+      display: block;
+    }
+
+    .image-preview img {
+      width: 100%;
+      max-height: 150px;
+      object-fit: cover;
+      border-radius: 8px;
+      border: 2px solid #e2e8f0;
+    }
+
     .form-actions {
       grid-column: span 2;
       display: flex;
@@ -175,6 +193,12 @@
     .btn-primary:hover {
       transform: translateY(-2px);
       box-shadow: 0 8px 20px rgba(102, 126, 234, 0.4);
+    }
+
+    .btn-primary:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+      transform: none;
     }
 
     .btn-secondary {
@@ -382,8 +406,13 @@
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
     }
 
     .modal-content {
@@ -401,6 +430,7 @@
         transform: translateY(20px);
         opacity: 0;
       }
+
       to {
         transform: translateY(0);
         opacity: 1;
@@ -472,6 +502,7 @@
     }
   </style>
 </head>
+
 <body>
   <div class="cms-container">
     <div class="header">
@@ -485,7 +516,7 @@
           <h2 id="formTitle">Add New Tour</h2>
           <span class="form-badge" id="formBadge">NEW</span>
         </div>
-        
+
         <form id="tourForm">
           <input type="hidden" id="editingId" value="">
           <div class="form-grid">
@@ -540,12 +571,31 @@
             </div>
 
             <div class="form-group full">
-              <label>Image URL</label>
-              <input name="imageLink" type="url" placeholder="https://example.com/image.jpg">
+              <label>Thumbnail Image</label>
+              <input id="thumbImage" type="file" accept="image/*">
+              <div class="image-preview" id="thumbPreview">
+                <img src="" alt="Thumbnail preview">
+              </div>
+            </div>
+
+            <div class="form-group full">
+              <label>Image 1</label>
+              <input id="tourImage1" type="file" accept="image/*">
+              <div class="image-preview" id="image1Preview">
+                <img src="" alt="Image 1 preview">
+              </div>
+            </div>
+
+            <div class="form-group full">
+              <label>Image 2</label>
+              <input id="tourImage2" type="file" accept="image/*">
+              <div class="image-preview" id="image2Preview">
+                <img src="" alt="Image 2 preview">
+              </div>
             </div>
 
             <div class="form-actions">
-              <button type="submit" class="btn btn-primary">
+              <button type="submit" class="btn btn-primary" id="submitBtn">
                 <span id="submitText">💾 Save Tour</span>
               </button>
               <button type="button" class="btn btn-secondary" id="cancelBtn" style="display: none;">
@@ -600,12 +650,16 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
+    // ImgBB API Key (Get free key from https://api.imgbb.com/)
+    const IMGBB_API_KEY = "624e7df60a5f80a3ef7aef1a5cf71ba1"; // Replace with your key
+
     const form = document.getElementById('tourForm');
     const toursList = document.getElementById('toursList');
     const editingIdInput = document.getElementById('editingId');
     const formTitle = document.getElementById('formTitle');
     const formBadge = document.getElementById('formBadge');
     const submitText = document.getElementById('submitText');
+    const submitBtn = document.getElementById('submitBtn');
     const cancelBtn = document.getElementById('cancelBtn');
     const tourCount = document.getElementById('tourCount');
     const deleteModal = document.getElementById('deleteModal');
@@ -613,7 +667,57 @@
     const confirmDelete = document.getElementById('confirmDelete');
     const cancelDelete = document.getElementById('cancelDelete');
 
+    const thumbImage = document.getElementById('thumbImage');
+    const tourImage1 = document.getElementById('tourImage1');
+    const tourImage2 = document.getElementById('tourImage2');
+
+    const thumbPreview = document.getElementById('thumbPreview');
+    const image1Preview = document.getElementById('image1Preview');
+    const image2Preview = document.getElementById('image2Preview');
+
     let deleteId = null;
+
+    // Image preview functionality
+    thumbImage.addEventListener('change', (e) => previewImage(e, thumbPreview));
+    tourImage1.addEventListener('change', (e) => previewImage(e, image1Preview));
+    tourImage2.addEventListener('change', (e) => previewImage(e, image2Preview));
+
+    function previewImage(event, previewElement) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = (e) => {
+          previewElement.querySelector('img').src = e.target.result;
+          previewElement.classList.add('show');
+        };
+        reader.readAsDataURL(file);
+      }
+    }
+
+    // Upload image to ImgBB
+    const uploadToImgBB = async (file) => {
+      if (!file) return null;
+
+      const formData = new FormData();
+      formData.append('image', file);
+
+      try {
+        const response = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, {
+          method: 'POST',
+          body: formData
+        });
+
+        const data = await response.json();
+        if (data.success) {
+          return data.data.url;
+        } else {
+          throw new Error('Upload failed');
+        }
+      } catch (error) {
+        console.error('ImgBB upload error:', error);
+        return null;
+      }
+    };
 
     // Load and display tours
     const loadTours = () => {
@@ -660,7 +764,6 @@
             toursList.appendChild(card);
           });
 
-          // Attach edit handlers
           toursList.querySelectorAll('.edit').forEach(button => {
             button.addEventListener('click', () => {
               const id = button.dataset.id;
@@ -668,7 +771,6 @@
             });
           });
 
-          // Attach delete handlers
           toursList.querySelectorAll('.delete').forEach(button => {
             button.addEventListener('click', () => {
               const id = button.dataset.id;
@@ -692,7 +794,6 @@
       });
     };
 
-    // Fill form for editing
     const fillForm = (id, tour) => {
       editingIdInput.value = id;
       formTitle.textContent = 'Edit Tour';
@@ -711,12 +812,28 @@
       form.day4.value = (tour.day4 || []).join(', ');
       form.packageIncludes.value = (tour.packageIncludes || []).join(', ');
       form.exclusions.value = (tour.exclusions || []).join(', ');
-      form.imageLink.value = tour.imageLink || '';
+
+      // Show existing images
+      if (tour.imageLink) {
+        thumbPreview.querySelector('img').src = tour.imageLink;
+        thumbPreview.classList.add('show');
+      }
+      if (tour.image1) {
+        image1Preview.querySelector('img').src = tour.image1;
+        image1Preview.classList.add('show');
+      }
+      if (tour.image2) {
+        image2Preview.querySelector('img').src = tour.image2;
+        image2Preview.classList.add('show');
+      }
+
+      thumbImage.value = '';
+      tourImage1.value = '';
+      tourImage2.value = '';
 
       form.scrollIntoView({ behavior: 'smooth', block: 'start' });
     };
 
-    // Reset form
     const resetForm = () => {
       form.reset();
       editingIdInput.value = '';
@@ -725,41 +842,98 @@
       formBadge.classList.remove('editing');
       submitText.textContent = '💾 Save Tour';
       cancelBtn.style.display = 'none';
+      thumbImage.value = '';
+      tourImage1.value = '';
+      tourImage2.value = '';
+      thumbPreview.classList.remove('show');
+      image1Preview.classList.remove('show');
+      image2Preview.classList.remove('show');
     };
 
-    // Cancel button
     cancelBtn.addEventListener('click', resetForm);
 
-    // Handle form submit
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
+
+      submitBtn.disabled = true;
+      const originalText = submitText.textContent;
+
       const formData = new FormData(form);
       const data = {};
 
-      formData.forEach((val, key) => {
-        if (["day1","day2","day3","day4","packageIncludes","exclusions"].includes(key)) {
-          data[key] = val ? val.split(",").map(v => v.trim()).filter(v => v) : [];
-        } else {
-          data[key] = val.trim();
-        }
-      });
-
-      const editingId = editingIdInput.value;
-
       try {
+        formData.forEach((val, key) => {
+          if (["day1", "day2", "day3", "day4", "packageIncludes", "exclusions"].includes(key)) {
+            data[key] = val ? val.split(",").map(v => v.trim()).filter(v => v) : [];
+          } else {
+            data[key] = val.trim();
+          }
+        });
+
+        const editingId = editingIdInput.value;
+
+        // Upload images to ImgBB
+        if (thumbImage.files[0]) {
+          submitText.textContent = '⏳ Uploading thumbnail...';
+          data.imageLink = await uploadToImgBB(thumbImage.files[0]);
+        } else if (editingId) {
+          const existingRef = ref(db, `tours/${editingId}`);
+          const snapshot = await new Promise((resolve) => {
+            onValue(existingRef, resolve, { onlyOnce: true });
+          });
+          const existingData = snapshot.val();
+          if (existingData?.imageLink) {
+            data.imageLink = existingData.imageLink;
+          }
+        }
+
+        if (tourImage1.files[0]) {
+          submitText.textContent = '⏳ Uploading image 1...';
+          data.image1 = await uploadToImgBB(tourImage1.files[0]);
+        } else if (editingId) {
+          const existingRef = ref(db, `tours/${editingId}`);
+          const snapshot = await new Promise((resolve) => {
+            onValue(existingRef, resolve, { onlyOnce: true });
+          });
+          const existingData = snapshot.val();
+          if (existingData?.image1) {
+            data.image1 = existingData.image1;
+          }
+        }
+
+        if (tourImage2.files[0]) {
+          submitText.textContent = '⏳ Uploading image 2...';
+          data.image2 = await uploadToImgBB(tourImage2.files[0]);
+        } else if (editingId) {
+          const existingRef = ref(db, `tours/${editingId}`);
+          const snapshot = await new Promise((resolve) => {
+            onValue(existingRef, resolve, { onlyOnce: true });
+          });
+          const existingData = snapshot.val();
+          if (existingData?.image2) {
+            data.image2 = existingData.image2;
+          }
+        }
+
+        // Save to database
+        submitText.textContent = '⏳ Saving...';
         if (editingId) {
           await update(ref(db, `tours/${editingId}`), data);
         } else {
           await push(ref(db, 'tours/'), data);
         }
+
         resetForm();
+        alert('✅ Tour saved successfully!');
       } catch (error) {
         console.error(error);
         alert('❌ Failed to save tour. Please try again.');
+      } finally {
+        submitBtn.disabled = false;
+        submitText.textContent = originalText;
       }
     });
 
-    // Delete confirmation
     confirmDelete.addEventListener('click', async () => {
       if (deleteId) {
         try {
@@ -778,7 +952,6 @@
       deleteId = null;
     });
 
-    // Close modal on outside click
     deleteModal.addEventListener('click', (e) => {
       if (e.target === deleteModal) {
         deleteModal.classList.remove('active');
@@ -789,4 +962,5 @@
     loadTours();
   </script>
 </body>
+
 </html>
