--- a/public/tourblog.html
+++ b/public/tourblog.html
@@ -38,19 +38,19 @@
 		<div class="header-top">
 			<div class="container">
 				<div class="row align-items-center">
-					
-					 <div class="col-lg-6 col-sm-6 col-6 header-top-right">
-            <div class="header-social">
-              <a href="https://www.facebook.com/share/1AAkE5t75K/" target="_blank" title="Facebook">
-                <i class="fa fa-facebook"></i>
-              </a>
-              <a href="https://www.instagram.com/jungle_hues/?igsh=aWJmb2p0ZHZkb2dy" target="_blank" title="Instagram">
-                <i class="fa fa-instagram"></i>
-              </a>
-              <a href="https://www.linkedin.com/company/jungle-hues/" target="_blank" title="LinkedIn">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </div>
+					<div class="col-lg-6 col-sm-6 col-6 header-top-left">
+						<ul>
+							<li><a href="#">Visit Us</a></li>
+							<li><a href="#">Buy Tickets</a></li>
+						</ul>
+					</div>
+					<div class="col-lg-6 col-sm-6 col-6 header-top-right">
+						<div class="header-social">
+							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="#"><i class="fa fa-dribbble"></i></a>
+							<a href="#"><i class="fa fa-behance"></i></a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -213,103 +213,101 @@
 
 
 
- <!-- start footer Area -->
-  <footer class="footer-area section-gap">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3  col-md-6 col-sm-6">
-          <div class="single-footer-widget">
-            <h6>About jungle-hues</h6>
-            <p>
-              At Jungle Hues, we connect people with nature through wildlife tours, educational workshops, and engaging
-              content. 🌿🐾 We aim to inspire appreciation for biodiversity and promote conservation through experiences
-              and our Marathi podcast. Join us to explore, learn, and make a positive impact on our planet together.
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6">
-          <div class="single-footer-widget">
-            <h6>Navigation Links</h6>
-            <div class="row">
-              <div class="col">
-                <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Feature</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+	<!-- start footer Area -->
+	<footer class="footer-area section-gap">
+		<div class="container">
 
-        <div class="col-lg-3 col-md-6 col-sm-6">
-          <div class="single-footer-widget">
-            <h6>Join Our WhatsApp Group</h6>
-            <p>
-              Be part of our community and get the latest updates directly on WhatsApp.
-            </p>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="single-footer-widget">
-                <!-- <h6>Join Our WhatsApp Group</h6> -->
-                <a href="https://chat.whatsapp.com/D0SCi7sscCnA6A0ZRWXckz?mode=wwc" target="_blank" class="btn bb-btn">
-                  <span class="lnr lnr-location"></span> Join Now
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
+			<div class="row">
+				<div class="col-lg-3  col-md-6 col-sm-6">
+					<div class="single-footer-widget">
+						<h6>About Agency</h6>
+						<p>
+							The world has become so fast paced that people don’t want to stand by reading a page of
+							information, they would much rather look at a presentation and understand the message. It
+							has come to a point
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6">
+					<div class="single-footer-widget">
+						<h6>Navigation Links</h6>
+						<div class="row">
+							<div class="col">
+								<ul>
+									<li><a href="#">Home</a></li>
+									<li><a href="#">Feature</a></li>
+									<li><a href="#">Services</a></li>
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+							</div>
+							<div class="col">
+								<ul>
+									<li><a href="#">Team</a></li>
+									<li><a href="#">Pricing</a></li>
+									<li><a href="#">Blog</a></li>
+									<li><a href="#">Contact</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3  col-md-6 col-sm-6">
+					<div class="single-footer-widget">
+						<h6>Newsletter</h6>
+						<p>
+							For business professionals caught between high OEM price and mediocre print and graphic
+							output.
+						</p>
+						<div id="mc_embed_signup">
+							<form target="_blank"
+								action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+								method="get" class="subscription relative">
+								<div class="input-group d-flex flex-row">
+									<input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''"
+										onblur="this.placeholder = 'Email Address '" required="" type="email">
+									<button class="btn bb-btn"><span class="lnr lnr-location"></span></button>
+								</div>
+								<div class="mt-10 info"></div>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3  col-md-6 col-sm-6">
+					<div class="single-footer-widget mail-chimp">
+						<h6 class="mb-20">InstaFeed</h6>
+						<ul class="instafeed d-flex flex-wrap">
+							<li><img src="img/i1.jpg" alt=""></li>
+							<li><img src="img/i2.jpg" alt=""></li>
+							<li><img src="img/i3.jpg" alt=""></li>
+							<li><img src="img/i4.jpg" alt=""></li>
+							<li><img src="img/i5.jpg" alt=""></li>
+							<li><img src="img/i6.jpg" alt=""></li>
+							<li><img src="img/i7.jpg" alt=""></li>
+							<li><img src="img/i8.jpg" alt=""></li>
+						</ul>
+					</div>
+				</div>
+			</div>
 
-        <div class="col-lg-3 col-md-6 col-sm-6">
-          <div class="single-footer-widget">
-            <h6>Raise a Query</h6>
-            <p>
-              Have questions or need help with your next adventure? Send us your query and our team will get back to you
-              shortly.
-            </p>
-            <div id="query_form">
-              <form id="whatsappQueryForm" class="subscription relative">
-                <div class="input-group d-flex flex-column">
-                  <input name="name" id="query_name" placeholder="Your Name" onfocus="this.placeholder=''"
-                    onblur="this.placeholder='Your Name'" required type="text" class="mb-2">
-                  <input name="topic" id="query_topic" placeholder="Topic" onfocus="this.placeholder=''"
-                    onblur="this.placeholder='Topic'" required type="text" class="mb-2">
-                  <textarea name="message" id="query_message" placeholder="Your Query" onfocus="this.placeholder=''"
-                    onblur="this.placeholder='Your Query'" required rows="3" class="mb-2"></textarea>
-                  <button class="btn bb-btn" type="submit">
-                    <span class="lnr lnr-envelope"></span> Submit
-                  </button>
-                </div>
-                <div class="mt-10 info"></div>
-              </form>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <div class="row footer-bottom d-flex justify-content-between align-items-center">
-        <p class="col-lg-8 col-sm-12 footer-text m-0">
-          Copyright &copy;
-          <script>document.write(new Date().getFullYear());</script>
-          All rights reserved | Jungle Hues |
-          <!-- <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-        </p>
-
-        <div class="col-lg-4 col-sm-12 footer-social">
-          <a href="https://www.facebook.com/share/1AAkE5t75K/" target="_blank" title="Facebook">
-            <i class="fa fa-facebook"></i>
-          </a>
-          <a href="https://www.instagram.com/jungle_hues/?igsh=aWJmb2p0ZHZkb2dy" target="_blank" title="Instagram">
-            <i class="fa fa-instagram"></i>
-          </a>
-          <a href="https://www.linkedin.com/company/jungle-hues/" target="_blank" title="LinkedIn">
-            <i class="fa fa-linkedin"></i>
-          </a>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- End footer Area -->
+			<div class="row footer-bottom d-flex justify-content-between align-items-center">
+				<p class="col-lg-8 col-sm-12 footer-text m-0">
+					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
+					made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
+						target="_blank">Colorlib</a>
+					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				</p>
+				<div class="col-lg-4 col-sm-12 footer-social">
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-dribbble"></i></a>
+					<a href="#"><i class="fa fa-behance"></i></a>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- End footer Area -->
 
 
 
