--- a/public/tourblog.html
+++ b/public/tourblog.html
@@ -116,7 +116,7 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-6 insurence-left">
-					<img class="img-fluid img-one" src="img/insurence/i1.jpg" alt="">
+					<img class="img-fluid img-one" id="tourImage1" alt="">
 				</div>
 				<div class="col-lg-6 insurence-right">
 					<!-- <h6 class="text-uppercase">Need to know</h6> -->
@@ -182,7 +182,7 @@
 					</div>
 				</div>
 				<div class="col-lg-6 insurence-right">
-					<img class="img-fluid img-two" src="img/insurence/i2.jpg" alt="">
+					<img class="img-fluid img-two" id="tourImage2" alt="">
 				</div>
 				<div class="section-top-border">
 					<h3 class="mb-30"> We are dedicated to providing you with an exceptional experience. Please note the
