changes and added blog fucniolity

--- a/public/blog.html
+++ b/public/blog.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Travel</title>
+	<title>Blog - Travel</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 	<!--
@@ -30,6 +30,134 @@
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
+	<style>
+		.blog-hero-image {
+			width: 100%;
+			height: 400px;
+			object-fit: cover;
+			margin: 30px 0;
+		}
+
+		.blog-title-section {
+			margin: 40px 0;
+		}
+
+		.blog-title-section h1 {
+			color: #2d3436;
+			font-size: 2.5rem;
+			margin-bottom: 20px;
+		}
+
+		.blog-meta {
+			color: #636e72;
+			font-size: 0.95rem;
+			margin-bottom: 20px;
+		}
+
+		.author-section {
+			background: #f8f9fa;
+			padding: 30px;
+			border-radius: 8px;
+			margin: 40px 0;
+		}
+
+		.author-header {
+			display: flex;
+			gap: 20px;
+			margin-bottom: 20px;
+		}
+
+		.author-image {
+			width: 120px;
+			height: 120px;
+			border-radius: 50%;
+			object-fit: cover;
+		}
+
+		.author-info h3 {
+			color: #2d3436;
+			margin-bottom: 5px;
+		}
+
+		.author-bio {
+			color: #636e72;
+			line-height: 1.6;
+			margin-top: 15px;
+		}
+
+		.blog-content-section {
+			margin: 50px 0;
+		}
+
+		.section-heading {
+			color: #2d3436;
+			font-size: 1.8rem;
+			margin: 30px 0 20px 0;
+			border-bottom: 3px solid #fdb900;
+			padding-bottom: 10px;
+		}
+
+		.section-image {
+			width: 100%;
+			height: 300px;
+			object-fit: cover;
+			border-radius: 8px;
+			margin: 20px 0;
+		}
+
+		.section-content {
+			color: #636e72;
+			line-height: 1.8;
+			font-size: 1rem;
+			margin: 20px 0;
+		}
+
+		.section-details {
+			background: #f8f9fa;
+			padding: 20px;
+			border-left: 4px solid #fdb900;
+			margin: 20px 0;
+		}
+
+		.detail-item {
+			margin: 15px 0;
+		}
+
+		.detail-label {
+			font-weight: 600;
+			color: #2d3436;
+			display: inline-block;
+			min-width: 150px;
+		}
+
+		.detail-value {
+			color: #636e72;
+		}
+
+		.loading {
+			text-align: center;
+			padding: 60px 20px;
+			font-size: 1.2rem;
+			color: #636e72;
+		}
+
+		.error {
+			background: #ffe5e5;
+			color: #d63031;
+			padding: 20px;
+			border-radius: 8px;
+			margin: 20px 0;
+		}
+
+		.breadcrumb-link {
+			color: #636e72;
+			text-decoration: none;
+		}
+
+		.breadcrumb-link:hover {
+			color: #fdb900;
+		}
+	</style>
 </head>
 
 <body>
@@ -38,7 +166,7 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-6 col-sm-6 col-6 header-top-left">
-						<ul ></ul>
+						<ul></ul>
 					</div>
 					<div class="col-lg-6 col-sm-6 col-6 header-top-right">
 						<div class="header-social">
@@ -67,15 +195,8 @@
 					<ul class="nav-menu">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<!-- <li><a href="packages.html">Tours</a></li> -->
-						<!-- <li class="menu-has-children"><a href="#">Tours</a>
-              <ul id="blog-menu"></ul>
-            </li> -->
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="#podcast-section">Jungle Podcast</a></li>
-						<!-- <li class="menu-has-children"><a href="#">Blog</a>
-              <ul id="blog-menu"></ul>
-            </li> -->
 						<li class="menu-has-children"><a href="">Gallery</a>
 							<ul>
 								<li><a href="Gallery1fauna.html">Flaura</a></li>
@@ -95,151 +216,59 @@
 		<div class="container">
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h1 class="text-white">
-						Tour Packages
-					</h1>
-					<p class="text-white link-nav"><a href="index.html">Home </a> <span
-							class="lnr lnr-arrow-right"></span> <a href="packages.html"> Tour Packages</a></p>
+					<h1 class="text-white" id="banner-title">Blog Post</h1>
+					<p class="text-white link-nav"><a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> 
+						<a href="#" class="breadcrumb-link" id="breadcrumb-blog">Blog</a></p>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- End banner Area -->
 
-
-
-	<!-- Start hot-deal Area -->
-	<section class="hot-deal-area section-gap">
+	<!-- Start Blog Content Area -->
+	<section class="blog-content-area section-gap">
 		<div class="container">
-			<div class="row d-flex justify-content-center">
-				<div class="menu-content pb-70 col-lg-8">
-					<div class="title text-center">
-						<h1 class="mb-10">Today’s Hot Deals</h1>
-						<p>We all live in an age that belongs to the young at heart. Life that is becoming extremely
-							fast, day to.</p>
-					</div>
-				</div>
-			</div>
 			<div class="row justify-content-center">
-				<div class="col-lg-10 active-hot-deal-carusel">
-					<div class="single-carusel">
-						<div class="thumb relative">
-							<div class="overlay overlay-bg"></div>
-							<img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
-						</div>
-						<div class="price-detials">
-							<a href="#" class="price-btn">Starting From <span>$250</span></a>
-						</div>
-						<div class="details">
-							<h4 class="text-white">Ancient Architecture</h4>
-							<p class="text-white">
-								Cairo, Egypt
-							</p>
-						</div>
+				<div class="col-lg-10">
+					<!-- Loading State -->
+					<div id="loading" class="loading">
+						<p>Loading blog post...</p>
 					</div>
 
-					<div class="single-carusel">
-						<div class="thumb relative">
-							<div class="overlay overlay-bg"></div>
-							<img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
-						</div>
-						<div class="price-detials">
-							<a href="#" class="price-btn">Starting From <span>$250</span></a>
-						</div>
-						<div class="details">
-							<h4 class="text-white">Ancient Architecture</h4>
-							<p class="text-white">
-								Cairo, Egypt
-							</p>
-						</div>
-					</div>
+					<!-- Error State -->
+					<div id="error" style="display: none;"></div>
 
-					<div class="single-carusel">
-						<div class="thumb relative">
-							<div class="overlay overlay-bg"></div>
-							<img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
-						</div>
-						<div class="price-detials">
-							<a href="#" class="price-btn">Starting From <span>$250</span></a>
-						</div>
-						<div class="details">
-							<h4 class="text-white">Ancient Architecture</h4>
-							<p class="text-white">
-								Cairo, Egypt
-							</p>
-						</div>
-					</div>
+					<!-- Blog Content Container -->
+					<div id="blog-container" style="display: none;">
+						<!-- Blog Hero Image -->
+						<img id="blog-main-image" src="/placeholder.svg" alt="Blog main image" class="blog-hero-image">
 
-				</div>
+						<!-- Blog Title Section -->
+						<div class="blog-title-section">
+							<h1 id="blog-title">Blog Title</h1>
+							<div class="blog-meta" id="blog-meta"></div>
+						</div>
 
-				<div class="section-top-border">
-					<h3 class="mb-30">Authors</h3>
-					<div class="row">
-						<div class="col-md-3">
-							<img src="img/elements/d.jpg" alt="Logo" title="Logo"
-								style="width:120px; height:auto;" /></a>
+						<!-- Author Section -->
+						<div class="author-section">
+							<h3 style="margin-bottom: 20px;">About the Author</h3>
+							<div class="author-header">
+								<img id="author-image" src="/placeholder.svg" alt="Author image" class="author-image">
+								<div class="author-info">
+									<h3 id="author-name">Author Name</h3>
+									<div class="author-bio" id="author-bio">Author bio goes here</div>
+								</div>
+							</div>
 						</div>
-						<div class="col-md-9 mt-sm-20 left-align-p">
-							<p>Recently, the US Federal government banned online casinos from operating in America by
-								making it illegal to transfer money to them through any US bank or payment system. As a
-								result of this law, most of the popular online casino networks such as Party Gaming and
-								PlayTech left the United States. Overnight, online casino players found themselves being
-								chased by the Federal government. But, after a fortnight, the online casino industry
-								came up with a solution and new online casinos started taking root. These began to
-								operate under a different business umbrella, and by doing that, rendered the transfer of
-								money to and from them legal. A major part of this was enlisting electronic banking
-								systems that would accept this new clarification and start doing business with me.
-								Listed in this article are the electronic banking systems that accept players from the
-								United States that wish to play in online casinos.</p>
-						</div>
+
+						<!-- Blog Sections Container -->
+						<div id="sections-container"></div>
 					</div>
 				</div>
-
-
-
-				<div class="container">
-					<h3 class="text-heading">Key Takeaways</h3>
-
-					<div class="single-carusel">
-						<div class="thumb relative">
-							<div class="overlay overlay-bg"></div>
-							<img class="img-fluid" src="img/packages/hot-deal.jpg" alt="">
-						</div>
-						<div class="price-detials">
-							<a href="#" class="price-btn">Starting From <span>$250</span></a>
-						</div>
-						<div class="details">
-							<h4 class="text-white">Ancient Architecture</h4>
-							<p class="text-white">
-								Cairo, Egypt
-							</p>
-						</div>
-					</div>
-
-
-					<p class="sample-text">
-						Time your drives around weather breaks and wind direction for sound/odour advantage.
-					</p>
-					<p class="sample-text">
-						Slow, quiet approach beats speeding—watch for fresh pugmarks and alarm calls.
-					</p>
-					<p class="sample-text">
-						Ethics first: give space, engines off near resting wildlife, no crowding.
-					</p>
-				</div>
-
-				
 			</div>
 		</div>
 	</section>
-	<!-- End hot-deal Area -->
-
-	<!-- Start Sample Area -->
-	<section class="sample-text-area">
-
-	</section>
-
-
+	<!-- End Blog Content Area -->
 
 	<!-- start footer Area -->
 	<footer class="footer-area section-gap">
@@ -282,7 +311,6 @@
 						</p>
 						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<!-- <h6>Join Our WhatsApp Group</h6> -->
 								<a href="https://chat.whatsapp.com/D0SCi7sscCnA6A0ZRWXckz?mode=wwc" target="_blank"
 									class="btn bb-btn">
 									<span class="lnr lnr-location"></span> Join Now
@@ -328,7 +356,6 @@
 					Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script>
 					All rights reserved | Jungle Hues |
-					<!-- <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
 				</p>
 
 				<div class="col-lg-4 col-sm-12 footer-social">
@@ -348,6 +375,10 @@
 	</footer>
 	<!-- End footer Area -->
 
+	<!-- Firebase configuration and blog display logic -->
+	
+	<!-- End -->
+
 	<script src="js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/vendor/bootstrap.min.js"></script>
@@ -362,6 +393,7 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/mail-script.js"></script>
 	<script src="js/main.js"></script>
+	<script type="module" src="blog.js"></script>
 </body>
 
 </html>
