--- a/public/blog.html
+++ b/public/blog.html
@@ -30,6 +30,7 @@
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
+	<script type="module" src="blog.js"></script>
 	<style>
 		.blog-hero-image {
 			width: 100%;
@@ -217,8 +218,10 @@
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-white" id="banner-title">Blog Post</h1>
-					<p class="text-white link-nav"><a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> 
-						<a href="#" class="breadcrumb-link" id="breadcrumb-blog">Blog</a></p>
+					<p class="text-white link-nav"><a href="index.html">Home </a> <span
+							class="lnr lnr-arrow-right"></span>
+						<a href="#" class="breadcrumb-link" id="breadcrumb-blog">Blog</a>
+					</p>
 				</div>
 			</div>
 		</div>
@@ -237,6 +240,7 @@
 
 					<!-- Error State -->
 					<div id="error" style="display: none;"></div>
+					<h1 id="banner-title" style="display:none;"></h1>
 
 					<!-- Blog Content Container -->
 					<div id="blog-container" style="display: none;">
@@ -253,10 +257,10 @@
 						<div class="author-section">
 							<h3 style="margin-bottom: 20px;">About the Author</h3>
 							<div class="author-header">
-								<img id="author-image" src="/placeholder.svg" alt="Author image" class="author-image">
+								<img id="author-image" class="author-image">
 								<div class="author-info">
-									<h3 id="author-name">Author Name</h3>
-									<div class="author-bio" id="author-bio">Author bio goes here</div>
+									<h3 id="author-name"></h3>
+									<div class="author-bio" id="author-bio"></div>
 								</div>
 							</div>
 						</div>
@@ -376,9 +380,9 @@
 	<!-- End footer Area -->
 
 	<!-- Firebase configuration and blog display logic -->
-	
-	<!-- End -->
 
+	<!-- End -->
+	
 	<script src="js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/vendor/bootstrap.min.js"></script>
@@ -393,7 +397,7 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/mail-script.js"></script>
 	<script src="js/main.js"></script>
-	<script type="module" src="blog.js"></script>
+
 </body>
 
 </html>
