--- a/public/index.html
+++ b/public/index.html
@@ -279,12 +279,9 @@ Children: ${child}`;
         </div>
       </div>
       <div class="row">
-        <div class="active-recent-blog-carusel">
-          <div class="single-recent-blog-post item " id="blogsContainer">
+          <div class="owl-carousel owl-theme " id="blogsContainer">
           
           </div>
-         
-        </div>
       </div>
     </div>
   </section>
